--- a/index.html
+++ b/index.html
@@ -98,23 +98,23 @@
                         </nav>
                     </div>
                 </div>
-            </div>    
-                <div class="conteneur-bouton-degustation-restaurant">
-                    <div class="bouton-degustation-restaurant">
-                        <div class="conteneur-icone-3-bouton-degustation-restaurant">
-                            <i class="fa-thin fa-3"></i>
-                        </div>
-                        <div class="conteneur-icone-bouton-degustation-restaurant">
-                            <i class="fa-solid fa-store"></i>
-                        </div>
-                        <div class="conteneur-texte-bouton-degustation-restaurant">
-                            <nav>
-                                <a href="#">Dégustez au restaurant</a>
-                            </nav>
-                        </div>
+            </div>
+            <div class="conteneur-bouton-degustation-restaurant">
+                <div class="bouton-degustation-restaurant">
+                    <div class="conteneur-icone-3-bouton-degustation-restaurant">
+                        <i class="fa-thin fa-3"></i>
+                    </div>
+                    <div class="conteneur-icone-bouton-degustation-restaurant">
+                        <i class="fa-solid fa-store"></i>
+                    </div>
+                    <div class="conteneur-texte-bouton-degustation-restaurant">
+                        <nav>
+                            <a href="#">Dégustez au restaurant</a>
+                        </nav>
                     </div>
                 </div>
-            </div>  
+            </div>
+        </div>
     </section>
 
     <!-- Cartes restaurants -->
@@ -124,14 +124,14 @@
         <div class="conteneur-restaurants">
             <div class="carte-restaurant">
                 <a href="menu1.html">
-                    <img src="MaquettesOhmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                        alt="Menu1">
+                    <img src="MaquettesOhmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Menu1">
                     <div class="conteneur-nouveau">
                         <p>Nouveau</p>
                     </div>
                     <div class="infos-carte">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
+                    </div>    
                 </a>
                 <div class="coeur">
                     <i class="fa-regular fa-heart coeurvide"></i>
@@ -148,6 +148,7 @@
                 <div class="infos-carte">
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
+                </div>    
             </a>
             <div class="coeur">
                 <i class="fa-regular fa-heart coeurvide"></i>
@@ -161,6 +162,7 @@
             <div class="infos-carte">
                 <h3>A la française</h3>
                 <p>Cité Rouge</p>
+            </div>    
         </a>
         <div class="coeur">
             <i class="fa-regular fa-heart coeurvide"></i>
@@ -175,6 +177,7 @@
             <div class="infos-carte">
                 <h3>Le délice des sens</h3>
                 <p>Folie-Méricourt</p>
+            </div>    
         </a>
         <div class="coeur">
             <i class="fa-regular fa-heart coeurvide"></i>
