--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header class="en-tete">
         <div class="conteneur-en-tete">
             <div class="logo">
-                <img src="Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo">
+                <img src="Maquettes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo">
             </div>
         </div>
     </header>
@@ -124,7 +124,7 @@
         <div class="conteneur-restaurants">
             <div class="carte-restaurant">
                 <a href="menu1.html">
-                    <img src="MaquettesOhmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Menu1">
+                    <img src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Menu1">
                     <div class="conteneur-nouveau">
                         <p>Nouveau</p>
                     </div>
@@ -141,7 +141,7 @@
         </div>
         <div class="carte-restaurant">
             <a href="menu2.html">
-                <img src="MaquettesOhmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Menu2">
+                <img src="Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Menu2">
                 <div class="conteneur-nouveau">
                     <p>Nouveau</p>
                 </div>
@@ -158,7 +158,7 @@
     </div>
     <div class="carte-restaurant">
         <a href="menu3.html">
-            <img src="MaquettesOhmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Menu3">
+            <img src="Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Menu3">
             <div class="infos-carte">
                 <h3>A la française</h3>
                 <p>Cité Rouge</p>
@@ -172,7 +172,7 @@
     </div>
     <div class="carte-restaurant">
         <a href="menu4.html">
-            <img src="MaquettesOhmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            <img src="Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="Menu4">
             <div class="infos-carte">
                 <h3>Le délice des sens</h3>
