--- a/menu1.html
+++ b/menu1.html
@@ -16,10 +16,6 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&family=Shrikhand&display=swap"
         rel="stylesheet">
 
-
-
-
-
 </head>
 
 
@@ -35,7 +31,7 @@
                 </nav>
             </div>
             <div class="logo">
-                <img src="Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo">
+                <img src="Maquettes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo">
             </div>
         </div>
     </header>
@@ -43,7 +39,7 @@
     <section class="image">
         <div class="conteneur-image">
             <div class="image-menu1">
-                <img src="Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Menu1">
+                <img src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Menu1">
             </div>
         </div>
     </section>
