--- a/menu2.html
+++ b/menu2.html
@@ -16,10 +16,6 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&family=Shrikhand&display=swap"
         rel="stylesheet">
 
-
-
-
-
 </head>
 
 
@@ -35,7 +31,7 @@
                 </nav>
             </div>
             <div class="logo">
-                <img src="Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo">
+                <img src="Maquettes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo">
             </div>
         </div>
     </header>
@@ -43,7 +39,7 @@
     <section class="image">
         <div class="conteneur-image">
             <div class="image-menu2">
-                <img src="Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Menu2">
+                <img src="Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Menu2">
             </div>
         </div>
     </section>
@@ -55,7 +51,7 @@
             <div class="menu2-titre">
                 <h1>La note enchantée</h1>
             </div>    
-            9
+            
             <div class="coeur">
                 <i class="fa-regular fa-heart coeurvide"></i>
                 <i class="fa-solid fa-heart coeurplein"></i>
