--- a/index.html
+++ b/index.html
@@ -124,14 +124,15 @@
         <div class="conteneur-restaurants">
             <div class="carte-restaurant">
                 <a href="menu1.html">
-                    <img src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Menu1">
+                    <img src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                        alt="Menu1">
                     <div class="conteneur-nouveau">
                         <p>Nouveau</p>
                     </div>
                     <div class="infos-carte">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
-                    </div>    
+                    </div>
                 </a>
                 <div class="coeur">
                     <i class="fa-regular fa-heart coeurvide"></i>
@@ -148,7 +149,7 @@
                 <div class="infos-carte">
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
-                </div>    
+                </div>
             </a>
             <div class="coeur">
                 <i class="fa-regular fa-heart coeurvide"></i>
@@ -162,14 +163,14 @@
             <div class="infos-carte">
                 <h3>A la française</h3>
                 <p>Cité Rouge</p>
-            </div>    
+            </div>
         </a>
         <div class="coeur">
             <i class="fa-regular fa-heart coeurvide"></i>
             <i class="fa-solid fa-heart coeurplein"></i>
         </div>
     </div>
-    
+
     <div class="carte-restaurant">
         <a href="menu4.html">
             <img src="Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
@@ -177,14 +178,14 @@
             <div class="infos-carte">
                 <h3>Le délice des sens</h3>
                 <p>Folie-Méricourt</p>
-            </div>    
+            </div>
         </a>
         <div class="coeur">
             <i class="fa-regular fa-heart coeurvide"></i>
             <i class="fa-solid fa-heart coeurplein"></i>
         </div>
     </div>
-    
+
 
     <!--Pied de page-->
 
@@ -225,7 +226,7 @@
                             <a href="mailto:contact@ohmyfood.com">Contact</a>
                         </nav>
                     </div>
-                </div>    
+                </div>
             </div>
         </div>
     </footer>
