--- a/index.html
+++ b/index.html
@@ -123,69 +123,78 @@
         <h1>Restaurants</h1>
         <div class="conteneur-restaurants">
             <div class="carte-restaurant">
-                <a href="menu1.html">
-                    <img src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                        alt="Menu1">
-                    <div class="conteneur-nouveau">
-                        <p>Nouveau</p>
-                    </div>
-                    <div class="infos-carte">
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                </a>
+                <div class="conteneur-infos-carte">
+                    <a href="menu1.html">
+                        <img src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt="Menu1">
+                        <div class="conteneur-nouveau">
+                            <p>Nouveau</p>
+                        </div>
+                        <div class="infos-carte">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
+                    </a>
                     <div class="coeur">
                         <i class="fa-regular fa-heart coeurvide"></i>
                         <i class="fa-solid fa-heart coeurplein"></i>
                     </div>
+                </div>
+            </div>
+
+            <div class="carte-restaurant">
+                <div class="conteneur-infos-carte">
+                    <a href="menu2.html">
+                        <img src="Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Menu2">
+                        <div class="conteneur-nouveau">
+                            <p>Nouveau</p>
+                        </div>
+                        <div class="infos-carte">
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
+                        </div>
+                    </a>
+                    <div class="coeur">
+                        <i class="fa-regular fa-heart coeurvide"></i>
+                        <i class="fa-solid fa-heart coeurplein"></i>
                     </div>
-        </div>
+                </div>
+            </div>
 
-        <div class="carte-restaurant">
-            <a href="menu2.html">
-                <img src="Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Menu2">
-                <div class="conteneur-nouveau">
-                    <p>Nouveau</p>
+            <div class="carte-restaurant">
+                <div class="conteneur-infos-carte">
+                    <a href="menu3.html">
+                        <img src="Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                            alt="Menu3">
+                        <div class="infos-carte">
+                            <h3>A la française</h3>
+                            <p>Cité Rouge</p>
+                        </div>
+                    </a>
+                    <div class="coeur">
+                        <i class="fa-regular fa-heart coeurvide"></i>
+                        <i class="fa-solid fa-heart coeurplein"></i>
+                    </div>
                 </div>
-                <div class="infos-carte">
-                    <h3>La note enchantée</h3>
-                    <p>Charonne</p>
+            </div>
+
+            <div class="carte-restaurant">
+                <div class="conteneur-infos-carte">
+                    <a href="menu4.html">
+                        <img src="Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="Menu4">
+                        <div class="infos-carte">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                    </a>
+                    <div class="coeur">
+                        <i class="fa-regular fa-heart coeurvide"></i>
+                        <i class="fa-solid fa-heart coeurplein"></i>
+                    </div>
                 </div>
-            </a>
-            <div class="coeur">
-                <i class="fa-regular fa-heart coeurvide"></i>
-                <i class="fa-solid fa-heart coeurplein"></i>
             </div>
         </div>
-
-        <div class="carte-restaurant">
-            <a href="menu3.html">
-                <img src="Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Menu3">
-                <div class="infos-carte">
-                    <h3>A la française</h3>
-                    <p>Cité Rouge</p>
-                </div>
-            </a>
-            <div class="coeur">
-                <i class="fa-regular fa-heart coeurvide"></i>
-                <i class="fa-solid fa-heart coeurplein"></i>
-            </div>
-        </div>
-
-        <div class="carte-restaurant">
-            <a href="menu4.html">
-                <img src="Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                    alt="Menu4">
-                <div class="infos-carte">
-                    <h3>Le délice des sens</h3>
-                    <p>Folie-Méricourt</p>
-                </div>
-            </a>
-            <div class="coeur">
-                <i class="fa-regular fa-heart coeurvide"></i>
-                <i class="fa-solid fa-heart coeurplein"></i>
-            </div>
-        </div>
-    </div>
     </div>
 
     <!--Pied de page-->
